--- a/.style.css
+++ b/.style.css
@@ -1,1 +1,30 @@
-.style.css
+h1{
+	color: black;
+	font-family: arial;
+	padding: 10px;
+	background-color: darkred;
+}
+h2{ 
+	color: black;
+	font-family: arial;
+	padding: 10px ; 
+ 	background-color: darkred;
+ 	float
+}
+Div{
+	background:color silver;
+	font-family:arial;
+	padding: 10px 
+	margin:10px 10px 10px 10px ;
+	border-radius: 10px solid;
+	width: 725px auto;
+ P {
+ 	heigt: 300px ;
+ 	width: 300px ;
+ 	background-color: silver;
+ }	
+
+<
+  }
+
+  <body>
