--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ boby{
 	height: 100%;
 }
 #our menu{
-	background-color: silver;
+	background-color: darkred;
 	padding: 10px solid;
 	margin: 10px solid;
 }
