--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@ boby{
 #our menu{
 	background-color: darkred;
 	padding: 10px solid;
-	margin: 30px solid;
+	margin: 30
+	px solid;
 }
-.p1 .p2 .p3{
+#p1,#p2,#p3 {
 	background-color: darkred;
 	width: 300px;
 	float: left;
