--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 p{
 	color: aquamarine;
 	width: 300px;
-	border-color: rgb(34, 4, 4);
-	border: 2px solid;
-
+	border-color: black;
+	border: 5px solid;
+	
 }
