--- a/style.css
+++ b/style.css
@@ -1,11 +1,23 @@
 p{
-	background-color: silvevr;
+	background-color: silver;
 	color: black;
-	width: 300px;
+	width: 300px ;
+	height: 300px ;
 	border-color: black;
 	border: 5px solid;
 
+
 }
+
 h1{
 	 text-align: center;
+
 }
+
+h2{
+	border-color: black;
+	border: 5px ;
+	text-align: center;
+	background-color: aqua;
+}
+
