--- a/style.css
+++ b/style.css
@@ -1,13 +1,4 @@
-p{
-	background-color: silver;
-	color: black;
-	width: 300px ;
-	height: 300px ;
-	border-color: black;
-	border: 5px solid;
 
-
-}
 
 h1{
 	 text-align: center;
@@ -21,3 +12,15 @@ h2{
 	background-color: aqua;
 }
 
+#nav, #feature, .article {
+
+	background-color: darkgray;
+	margin-top: 20px;
+	padding: 10px 10px 10px 10px;
+
+}
+
+.article{
+
+	height: 300px;
+}
