--- a/style.css
+++ b/style.css
@@ -18,6 +18,6 @@ h2{
 	margin-top: 20px;
 	max-height: 950px;
 	max-width: 950px;
-	border-block-start-color: rgb(243, 136, 5);
+	border: 10px;
 	
 	
