--- a/style.css
+++ b/style.css
@@ -4,8 +4,54 @@ body {
 	padding: 0;
 }
 
-h1{
+h1{ 
+	margin-bottom: 20px;
+	text-align: center;
+	color: #ff432;
+	font: size 50px;
 	
+}
+
+.conteiner-name {
+
+	overflow: none;
+	text-align: center;
+	border: 4px solid black;
+	height: 40px;
+	width: 100px;
+	padding: 5px;
+	float: right;
+	margin-right: 36px;
+	margin-top: 0px;
+	font-weight: normal;
+	position: relative;
+
+
+}
+
+.conteiner{
+	border: 5px solid black;
+	width: 90%;
+	height: auto;
+	margin-right: 5px;
+	color: black;
+	padding: 2%;
+	padding-top: 55px;
+	background-color: dark grey;
+
+}
+
+.nema1{ 
+	background-color: blue;
+}
+
+.name2{
+	background-color: blue;
+
+}
+
+.name3{
+	background-color: blue;
 }
 
 
