--- a/style.css
+++ b/style.css
@@ -7,18 +7,18 @@ body {
 h1{ 
 	margin-bottom: 20px;
 	text-align: center;
-	color: #ff432;
+	color: green;
 	font: size 50px;
 	
 }
 
-.conteiner-name {
+.content-name {
 
 	overflow: none;
 	text-align: center;
 	border: 4px solid black;
-	height: 40px;
 	width: 100px;
+    width: 100px;
 	padding: 5px;
 	float: right;
 	margin-right: 36px;
@@ -29,9 +29,9 @@ h1{
 
 }
 
-.conteiner{
+.content{
 	border: 5px solid black;
-	width: 90%;
+	width: 93%;
 	height: auto;
 	margin-right: 5px;
 	color: black;
@@ -42,18 +42,51 @@ h1{
 }
 
 .nema1{ 
-	background-color: blue;
+	background-color: rgb(81, 4, 16);
+	
 }
 
 .name2{
-	background-color: blue;
+	background-color: rgb(81, 8, 16);
 
 }
 
 .name3{
-	background-color: blue;
+	background-color:rgb(81, 4, 16);
+
+}
+@media ( min-width: 992px) 
+	{.col-lg-4{
+		float: left;
+		width: 34%
+	}
+}
+	
+@media (min-wid: 768 px) and 
+(max-width:992px) 
+   { .col-md-6,.col-md-12 
+	{float: :left; }
+
+	.col-md-6{
+	width: 50%;
+	}
+	.col-md-12{
+	margin-left: -12px;
+	max-width: 100%;
+	}
+}
+	
+
+@media(min-width: 0px) and (max-width: 767px)
+ {.col-sm-12 {
+	float: left;
+	width: 100%;
+ }
+ .conteiner-name{
+	margin-right: 30px;
+ }
+	
 }
 
 
-
-
+# { box-sizing: border-box;}
