--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@ body {
 	padding: 0;
 }
 
+
 h1{ 
 	margin-bottom: 20px;
 	text-align: center;
-	color: green;
-	font: size 50px;
+	color: rgb(10, 236, 10);
+	 
 	
 }
 
@@ -25,6 +26,7 @@ h1{
 	margin-top: 0px;
 	font-weight: normal;
 	position: relative;
+	background-color: dark rgb(114, 109, 109);
 
 
 }
@@ -33,41 +35,40 @@ h1{
 	border: 5px solid black;
 	width: 93%;
 	height: auto;
-	margin-right: 5px;
-	color: black;
-	padding: 2%;
+	margin-right: 10px;
+    padding: 2%;
 	padding-top: 55px;
-	background-color: dark grey;
+	background-color: dark rgb(114, 109, 109);
 
 }
 
 .nema1{ 
-	background-color: rgb(81, 4, 16);
+	background-color: rgb(9, 85, 129);
 	
 }
 
 .name2{
-	background-color: rgb(81, 8, 16);
+	background-color: rgb(9, 85, 129);
 
 }
 
 .name3{
-	background-color:rgb(81, 4, 16);
+	background-color:rgb(9, 85, 129);
 
 }
 @media ( min-width: 992px) 
 	{.col-lg-4{
-		float: left;
-		width: 34%
+		float: center;
+		width: 33.33%;
 	}
 }
 	
-@media (min-wid: 768 px) and 
-(max-width:992px) 
+@media (min-wid: 768PX ) and (max-width:992px) 
    { .col-md-6,.col-md-12 
-	{float: :left; }
+	{float: : left; 
 
-	.col-md-6{
+	}
+    .col-md-6{
 	width: 50%;
 	}
 	.col-md-12{
@@ -80,7 +81,7 @@ h1{
 @media(min-width: 0px) and (max-width: 767px)
  {.col-sm-12 {
 	float: left;
-	width: 100%;
+	width: 95%;
  }
  .conteiner-name{
 	margin-right: 30px;
