--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 	margin: 5px;
 	padding: 5px;
 }
@@ -8,7 +8,7 @@ body {
 h1{ 
 	margin-bottom: 50px;
 	text-align: center;
-	color: rgb(10, 236, 10);
+	color: rgb(0, 8, 0);
 	 
 	
 }
@@ -17,12 +17,12 @@ h1{
 
 	overflow: none;
 	text-align: center;
-	border: 4px solid black;
-    width: 100px;
-	padding: 5px;
+	border: 5px solid black;
+    width: 150px;
+	padding: 10px;
 	float: right;
-	margin-right: 36px;
-	margin-top: 0px;
+	margin-right: 0px;
+    margin-top: 0%;
 	font-weight: normal;
 	
 	
@@ -32,9 +32,9 @@ h1{
 
 .content{
 	border: 5px solid black;
-	width: 840px;
-	height:450px;
-	margin-right: 10px;
+	width: 95%;
+	height: 150px;
+	margin-right: 30px;
     padding: 2%;
 	padding-top: 55px;
 	
@@ -42,7 +42,7 @@ h1{
 }
 
 .nema1{ 
-	background-color: rgb(204, 104, 141);
+	background-color: pink;
 	
 	
 }
@@ -66,9 +66,7 @@ h1{
 
 .box {
 	box-sizing: content-box;
-	background-color: grey;
-	width: 450px;
-	height: 400px;
-}
+	background-color: rgb(135, 132, 132);
+	
 
 
