--- a/food.css
+++ b/food.css
@@ -1,43 +1,71 @@
-body{
+body {
+	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	margin: 5px;
+	padding: 5px;
+}
 
-  background-color: antiquewhite;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
+h1{ 
+	margin-bottom: 50px;
+	text-align: center;
+	color: rgb(0, 8, 0);
+	 
+	
+}
+
+.content-name {
+
+	overflow: none;
+	text-align: center;
+	border: 5px solid black;
+    width: 150px;
+	padding: 10px;
+	float: right;
+	margin-right: 0px;
+    margin-top: 0%;
+	font-weight: normal;
+	
+	
 
 
 }
 
-.conteiner{
-    background-color: aqua;
-    border-color: black;
-    border: 2% solid;
-    margin-bottom: 10%;
-    padding: 30%;
-
-
-
-}
-
-.conteinerbox{background-color: aqua;
-    border-color: black;
-    border: 2% solid;
-    margin-bottom: 10%;
-    padding: 30%;
-
-
-
+.content{
+	border: 5px solid black;
+	width: 95%;
+	height: 150px;
+	margin-right: 30px;
+    padding: 2%;
+	padding-top: 55px;
+	
 
 }
-.box1{
-    padding: 0%;
 
-
-
+.nema1{ 
+	background-color: pink;
+	
+	
 }
-.Box2{
-    padding: 0%;
 
+.name2{
+	background-color: rgb(193, 106, 108);
+	
 }
-.box3{
-    padding: 0%;
+
+.name3{
+	background-color:rgb(173, 179, 141);
+	
 }
+
+ .conteiner-name{
+	margin-right: 35px;
+ }
+	
+
+
+
+.box {
+	box-sizing: content-box;
+	background-color: rgb(135, 132, 132);}
+	
+
