--- a/style.css
+++ b/style.css
@@ -1,16 +1,29 @@
 BODY{
-    background-color: brown;
-    padding: 20;
-    max-width: 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #61122f;
+    font-family:'oxygen', sans-serif;
+
 }
 
 h1{
     font-family: 'Times New Roman', Times, serif;
+    font-size-adjust: 20px;
     background-color: aquamarine;
     background-attachment: fixed;
-    background-position: 0%;
-    position: relative;
+    text-align: center;
+    
+      
 }
+
+.header-nav {
+
+    background-color: #f6b319;
+    border-radius: 0;
+    border: 0;
+}
+
+
 @media screen {
     
 }
