--- a/style.css
+++ b/style.css
@@ -1,29 +1,17 @@
-BODY{
+body{
     font-size: 16px;
-    color: #fff;
-    background-color: #61122f;
-    font-family:'oxygen', sans-serif;
+color: brown;
+background-color: blueviolet;
+font-family: 'Times New Roman', Times, serif;
+
 
 }
 
-h1{
-    font-family: 'Times New Roman', Times, serif;
-    font-size-adjust: 20px;
-    background-color: aquamarine;
-    background-attachment: fixed;
-    text-align: center;
-    
-      
-}
+/***********HEADER******/
 
-.header-nav {
+#header-nav {
 
-    background-color: #f6b319;
+    background-color: yellowgreen;
     border-radius: 0;
     border: 0;
-}
-
-
-@media screen {
-    
 }
