--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-body{
+.body{ 
     font-size: 16px;
-color: brown;
-background-color: blueviolet;
-font-family: 'Times New Roman', Times, serif;
+    color:#fff;
+    background-color: #61122f;
+    font-family: 'Times New Roman', Times, serif;
 
 
 }
@@ -11,7 +11,9 @@ font-family: 'Times New Roman', Times, serif;
 
 #header-nav {
 
-    background-color: yellowgreen;
+    background-color: #f6b319;
     border-radius: 0;
     border: 0;
+    height: 50px;
+
 }
