--- a/style.css
+++ b/style.css
@@ -17,3 +17,12 @@
     height: 50px;
 
 }
+
+#logo-img{
+
+    background: url;('../img/logo img coursera text.png') no-repeat;
+    width: 150px;
+    height:150px;
+    margin: 10px 15px 10px 0px;
+
+}
