--- a/style.css
+++ b/style.css
@@ -1,28 +1,55 @@
-.body{ 
-    font-size: 16px;
-    color:#fff;
-    background-color: #61122f;
-    font-family: 'Times New Roman', Times, serif;
+*{
+padding: 0;
+margin: 0;
+text text-decoration: none;
+list-style: none;
+
+}
+body{
+    font-family: 'Courier New', Courier, monospace;
+    color: darkred;
+
 
 
 }
 
-/***********HEADER******/
-
-#header-nav {
-
-    background-color: #f6b319;
-    border-radius: 0;
-    border: 0;
-    height: 50px;
+nav{
+    height: 80px;
+    width: 100%;
+    background: darkgray;
 
 }
+label.logo-img{
+    
+    font-size: 35px;
+    font-weight: bold;
+    color: rgb(14, 1, 1);
+    padding: 0 100px;
+    line-height: 80px;
+    border-radius: 5px;border-color: black;
 
-#logo-img{
+}
+nav ul{
+     float: right;
+     margin-right: 40px;
+}
+nav li{
+    display: inline-block;
+    margin: 0 8px;
+    line-height: 18px;
 
-    background: url;('../img/logo img coursera text.png') no-repeat;
-    width: 150px;
-    height:150px;
-    margin: 10px 15px 10px 0px;
+}
+nav a{
+    color: #010a12;
+    font-size: 18px;
+    text-transform: uppercase;
+    border: 1px solid transparent;
+    padding: 7px 10px;
+    border-radius: 3px;
+}
+a.active,a:hover{
+    border: 3px solidi black;
+    transition: .5s;
+    
 
 }
