--- a/style.css
+++ b/style.css
@@ -8,45 +8,50 @@ list-style: none;
 body{
     font-family: 'Courier New', Courier, monospace;
     
+    
 
 }
 
 nav{
-    height: 80px;
+    height: 100px;
     width: 100%;
-    background: darkgray;
+    background: rgb(30, 245, 27);
 
 }
 label.logo-img{
     
     font-size: 35px;
     font-weight: bold;
-    color: rgb(14, 1, 1);
+    color: rgb(6, 0, 0);
     padding: 0 100px;
-    line-height: 80px;
-    border-radius: 5px;border-color: black;
+    line-height: 100px;
+    border-radius: 5px;
+    border: #010a12;
+    
 
 }
 nav ul{
      float: right;
-     margin-right: 40px;
+     margin-right: 20px;
 }
 nav li{
     display: inline-block;
-    margin: 0 8px;
-    line-height: 18px;
+    margin: 2px 8px;
+    line-height: 5px;
 
 }
+
+/*******para el diseno del borde
 nav a{
     color: #010a12;
-    font-size: 18px;
+    font-size: 20px;
     text-transform: uppercase;
-    border: 1px solid transparent;
-    padding: 7px 10px;
-    border-radius: 3px;
+    border: 2px solid rgb(7, 1, 1);
+    padding : 5px 5px;
+    border-radius: 5px;
 }
 a.active,a:hover{
-    border: 3px solidi black;
+    border: 5px solid transparent;
     transition: .5s;
     
 
