--- a/style.css
+++ b/style.css
@@ -1,39 +1,44 @@
 *{
 padding: 0;
 margin: 0;
-text text-decoration: none;
+text-decoration: none;
 list-style: none;
 
 }
+
 body{
-    font-family: 'Courier New', Courier, monospace;
-    
-    
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
 
+    
+   
 }
-
+/*******************para el diseno de la barra de navegacion*******************/
 nav{
     height: 100px;
     width: 100%;
-    background: rgb(30, 245, 27);
+    background: rgb(0, 4, 0);
 
 }
+
+/*******************para el diseno del logo ********/
 label.logo-img{
     
     font-size: 35px;
     font-weight: bold;
-    color: rgb(6, 0, 0);
+    color: #f5f6f7;
     padding: 0 100px;
-    line-height: 100px;
+    line-height: 80px;
     border-radius: 5px;
-    border: #010a12;
+    border: #1b70bb;
     
 
 }
+
 nav ul{
      float: right;
-     margin-right: 20px;
+     margin-right: 40px;
 }
+
 nav li{
     display: inline-block;
     margin: 2px 8px;
@@ -41,18 +46,35 @@ nav li{
 
 }
 
-/*******para el diseno del borde
+/*******para el diseno del borde de los home,mene,delivery,contac and feedback****/
 nav a{
-    color: #010a12;
+    color: #f5f6f7;
     font-size: 20px;
-    text-transform: uppercase;
-    border: 2px solid rgb(7, 1, 1);
+    text-transform: lowercase;
+    border: 2px solid #f5f6f7;
     padding : 5px 5px;
-    border-radius: 5px;
+    border-radius: 4px;
 }
+
 a.active,a:hover{
-    border: 5px solid transparent;
+    border: 1px solid transparent;
     transition: .5s;
     
 
+}
+
+.conteiner{
+
+    width: 100px;
+    height: 100px;
+}
+.img2{
+    wi
+}
+nav.icon{
+   color: white;
+   font-size:30px;
+   line-height:80px;
+   float: :left;
+   margin: right 40px;
 }
