--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ list-style: none;
 
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
+    background-image: url(IMG/restauranta\ .png) ;
+    background-size: 100%;
+    max-height: 100%;
+    
 
     
    
@@ -23,10 +27,10 @@ nav{
 /*******************para el diseno del logo ********/
 label.logo-img{
     
-    font-size: 35px;
+    font-size: 15px;
     font-weight: bold;
     color: #f5f6f7;
-    padding: 0 100px;
+    padding: 0 50px;
     line-height: 80px;
     border-radius: 5px;
     border: #1b70bb;
@@ -69,10 +73,10 @@ a.active,a:hover{
     height: 100px;
 }
 
+
 nav.icon{
    color: white;
    font-size:30px;
    line-height:80px;
-   float: :left;
    margin: right 40px;
 }
