--- a/style.css
+++ b/style.css
@@ -1,82 +1,41 @@
-*{
-padding: 0;
-margin: 0;
-text-decoration: none;
-list-style: none;
-
-}
-
-body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ;
-    background-image: url(IMG/restauranta\ .png) ;
-    background-size: 100%;
-    max-height: 100%;
-    
-
-    
-   
-}
-/*******************para el diseno de la barra de navegacion*******************/
-nav{
-    height: 100px;
-    width: 100%;
-    background: rgb(0, 4, 0);
-
-}
-
-/*******************para el diseno del logo ********/
-label.logo-img{
-    
-    font-size: 15px;
-    font-weight: bold;
-    color: #f5f6f7;
-    padding: 0 50px;
-    line-height: 80px;
-    border-radius: 5px;
-    border: #1b70bb;
-    
-
-}
-
-nav ul{
-     float: right;
-     margin-right: 40px;
-}
-
-nav li{
-    display: inline-block;
-    margin: 2px 8px;
-    line-height: 5px;
-
-}
-
-/*******para el diseno del borde de los home,mene,delivery,contac and feedback****/
-nav a{
-    color: #f5f6f7;
-    font-size: 20px;
-    text-transform: lowercase;
-    border: 2px solid #f5f6f7;
-    padding : 5px 5px;
-    border-radius: 4px;
-}
-
-a.active,a:hover{
-    border: 1px solid transparent;
-    transition: .5s;
-    
-
-}
-
-.conteiner{
-
-    width: 100px;
-    height: 100px;
-}
-
-
-nav.icon{
-   color: white;
-   font-size:30px;
-   line-height:80px;
-   margin: right 40px;
-}
+.no-js #mobile-menu__toggler {
+    display: none;
+  }
+  .no-js .aw-header__nav {
+    display: block;
+  }
+  .no-js .aw-header__logo {
+    margin-left: unset;
+  }
+  .transition {
+    transition: all 0.2s ease-in-out;
+  }
+  .order-1 {
+    order: 1;
+  }
+  .order-2 {
+    order: 2;
+  }
+  .order-3 {
+    order: 3;
+  }
+  /* use '@screen lg {...}' with npm version */
+  @media (min-width: 1024px) {
+    .lg\:order-1 {
+      order: 1;
+    }
+    .lg\:order-2 {
+      order: 2;
+    }
+    .lg\:order-3 {
+      order: 3;
+    }
+  }
+  .aw-hero {
+    background: rgb(26, 32, 44);
+    background: linear-gradient(
+      350deg,
+      rgba(26, 32, 44, 1) 0%,
+      rgba(107, 70, 193, 1) 100%
+    );
+  }
