--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 .header{
     background-color: aquamarine;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-and;
     align-items: center;
     height: 85px;
     padding: 5px 10px;
@@ -21,6 +21,7 @@ body{
 }
 .header.logo{
     cursor: pointer;
+    margin-right: auto;
 
 }
 .header.logo img{
@@ -29,6 +30,43 @@ body{
 }
 
 .header.logo img :hover{
+    transform: scale(1.1);
+
+}
+.header.nav-links{
+    list-style: none;
+
+}
+.header.nav-links li{
+    display: inline-block;
+    padding: 0px 10px;
+
+}
+.header.nav-links li a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+}
+.header.nav-links li a:hover{
+    transform: scale(1.1);
+}
+.header.nav-links li a:active{
+    color: rgb(59, 197, 25);
+}
+.header.btn button{
+    font-weight: 700;
+    color: aqua;
+    background:blue;
+    padding: 9px 25px;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+
+}
+.header.btn button:hover{
+    background-color: aqua;
+    color: blue;
     transform: scale(1.1);
 
 }
