--- a/style.css
+++ b/style.css
@@ -1,12 +1,6 @@
-#{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 20px;
-}
+
 body{
-    background-color: blue;
+    color: blue;
 
 
 }
@@ -19,14 +13,15 @@ body{
     padding: 5px 10px;
 
 }
-.header.logo{
+.logo{
     cursor: pointer;
     margin-right: auto;
 
+
 }
-.header.logo img{
-    height: 70px;
-    width: auto;
+.logo img{
+    height: 400px;
+    width: 300px;
 }
 
 .header.logo img :hover{
@@ -68,5 +63,7 @@ body{
     background-color: aqua;
     color: blue;
     transform: scale(1.1);
-
+}
+.nav{
+    color: aqua;
 }
