--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 header{
     display: flex;
-    height: 70px;
-   width: 100%;
     justify-content: space-between;
+    background-color: aqua;
+    color: blue;
 }
+    
 .logo{
     display: flex;
+    justify-content: ;
 }
 .logo img{
        height: 50px;
