--- a/style.css
+++ b/style.css
@@ -1,29 +1,140 @@
-header{
-    display: flex;
-    justify-content: space-between;
-    background-color: black;
-    color: rgb(255, 255, 255);
-    font-family: 'Courier New', Courier, monospace;
-   font-variant: initial;
-
+*{
+    margin: 0%;
+    padding: 0%;
+    box-sizing: border-box;
+    text-decoration: none;
 }
-    
-.logo{
+header{
+    background-color: rgb(0, 1, 1);
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    width: 100%;
+    height: 130px;
+    position: fixed;
+    top: 0%;
+    right: 0%;
+    z-index: 100;  
+}
+
+.conteiner{
+    display: flex;
+    max-width: 1200px;
+    height: 130px;
+    margin:auto;
+    justify-content: space-between;
+    align-items:center ;
+}
+header.logo{
     display: flex;
     justify-content: space-between;
     align-items: center;
-  
+    height: 130px;
+
 }
 .logo img{
-       height: 50px;
-       width: 50px;
-      
+   
+    width: 150px;
+    position: relative;
+    left: 20px;
+    margin-top: 10px;
 }
+.conteiner_nav-bar{
+    position: relative;
+    height: 100%;
+}
+
 h1{
-    color: rgb(1, 1, 29);
+    color: rgb(248, 248, 250);
     font-size: 50px;
     font-weight: bold;
     text-align: center;
 
 }
-body{}
+h2{
+    color: rgb(88, 37, 219);
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 5p
+    top: 10px;
+    left: 40px;
+    
+}  
+body{
+   height: 100vh;
+   background-color:darkred;
+  
+
+}
+.box1{
+    display: flex;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    background-color: rgb(252, 254, 252);
+    color: rgb(22, 22, 100);
+    border-color: solid black 2px;
+    justify-content: space-between;
+    align-items: left;
+    height: 30px;
+    width: 30%;
+    margin: auto;
+    margin-top: 80px;
+    padding: 20px;
+}
+    
+.box2{
+    display: flex;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    background-color: rgb(252, 254, 252);
+    color: rgb(22, 22, 100);
+    border-color: solid black 2px;
+    justify-content: space-between;
+    align-items: left;
+    height: 350px;
+    width: 30%;
+    margin: auto;
+    margin-top: 80px;
+    padding: 20px;
+}   
+.box3{
+    display: flex;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    background-color: rgb(252, 254, 252);
+    color: rgb(22, 22, 100);
+    border-color: solid black 2px;
+    justify-content: space-between;
+    align-items: left;
+    height: 350px;
+    width: 30%;
+    margin: auto;
+    margin-top: 80px;
+    padding: 20px;
+    
+} 
+
+nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+    color: aliceblue;
+
+}
+.p1{
+    border-radius: 2PX;
+    color: aliceblue;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serifS;
+    justify-content: space-between;
+}
+.name1{
+    color: rgb(88, 37, 219);
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+}
+
+   
