--- a/style.css
+++ b/style.css
@@ -5,50 +5,60 @@
     box-sizing: border-box;
     text-decoration: none;
 }
-
+/*this part have control for header of my nav-bar*/
 header{
 
     width: 100%;
     height: 100px;
-    background-color: #f5f5f5;
+    background-color: #686666;
     display: flex;
-    margin: 0; 
-    text-align: center;
-
+    justify-content: space-between;
+    align-items: center;
+    border: 5px solid #0e0f0e;
+    
 }
 /* this conteiner has contrl about logo*/
-.conteiner{
-  display: flex;
-  width: 150px;
-  height: 125px;
-  justify-content: center;
-  align-items: center;
-  margin: 10px;
 
-}
 .logo{
-  width: 150px;
-  height: 125px;
+  display: flex;
+  width:30px;
+}
+nav{
+  display: flex;
+  justify-content: space-between;
+  
 
 }
-.logo img{
-  width: 150px;
-  height: 120px;
+
+nav.a{
+ font-weight: 600;
+font-size: 20px;
+
 }
+nav.a:hover{
+  color: #38f132;
+
+}
+
+/* this part is for menu bar*/
 
 h2{
-  color: #25259f;
-  font-size: 35px;
-  font-weight: 600;
-  font-family: 'Roboto', sans-serif;
-  text-align: center;
+  display: flex;
+  color: #00000c;
+  font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  align-items: center;
+  justify-content: center;
+ 
 }
+
 
 /* this is for our menu title*/
 h1{
   display: flex;
   justify-content: center;
-  color: #0505ba;
+  color: #00000c;
   font-size: 35px;
   font-weight: 600;
   font-family: 'Roboto', sans-serif;
@@ -56,12 +66,48 @@ h1{
 
 }
 
-nav{
-  display: flex;
-  justify-content: space-between;
-  width: 80%;
-  align-items: center;
-  margin: 0 auto;
-  padding: 20px;
+
+.box1{
+  display: grid;
+  width: 95%;
+  height: 300px;
+  margin: auto;
+  border: 2px solid #0e0f0e;
+  background-color: #9b9999;
+  font-size: 17px;
+  font-weight: 450px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+
+ 
 
 }
+.box2{ display: grid;
+  width: 95%;
+  height: 300px;
+  margin: auto;
+  border: 2px solid #0e0f0e;
+  background-color: #9b9999;
+  font-size: 17px;
+  font-weight: 450px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+  .box3{ display: grid;
+    width: 95%;
+    height: 300px;
+    margin: auto;
+    border: 2px solid #0e0f0e;
+    background-color: #9b9999;
+    font-size: 17px;
+    font-weight: 450px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  } 
+  .galery{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(aut-fill minmax(15rem, 1fr) );
+    overflow: hidden;
+    
+  }
+ 
+
+
