--- a/style.css
+++ b/style.css
@@ -19,14 +19,10 @@ header{
 }
 /* this conteiner has contrl about logo*/
 
-.logo{
-  display: flex;
-  width:30px;
-}
 nav{
   display: flex;
   justify-content: space-between;
-  
+  max-width: 50px;
 
 }
 
@@ -51,6 +47,9 @@ h2{
   align-items: center;
   justify-content: center;
  
+}
+.restaurant-name{
+  
 }
 
 
